High school awards

--- a/section_experience_research.tex
+++ b/section_experience_research.tex
@@ -14,7 +14,8 @@
 \begin{experiences}
   \experience
     {Current}   {Teaching Assistant}{University of Texas at Austin}{Austin, Texas}
-    {August 2017} { Teaching assistant for the Lingusitics apartment. Responsibilities include holding office hours, overseeing and grading assignments and final projects; proctoring and grading exams. Classes have included:
+    {August 2017} { Teaching assistant for the Lingusitics department
+. Responsibilities include holding office hours, overseeing and grading assignments and final projects; proctoring and grading exams. Classes have included:
                       \begin{itemize}
                         \item Fall 2018: Computational Semantics (Katrin Erk) 
                         \item Spring 2018: Language and Computers (Junyi Jessy Li)
