--- a/section_awards.tex
+++ b/section_awards.tex
@@ -9,6 +9,8 @@
 		\award{2011}{Phi Eta Sigma }{Emory University, national honor society for first-year students}
 		%Member of the 2011 DIII National Champion Women’s Team, 2011 All American in the 400 IM, former conference record holder and 2011 Champion in the 200 Butterfly, two-time NCAA Scholar-Athlete. 
 		\award{2010-2011}{Dean's List}{Emory University} %Fall 2010, Spring 2011, Fall 2011
+		\award{2010}{National Scholar/Athlete Award}{United States Army Reserve}
+		\award{2010}{Principal's Award}{Niskayuna High School}
 % 		\award{2009}{New York State Section II Sportsmanship Award}{}
 %Niskayuna High School Varsity Swim Team Senior Captain, three-time NY State Championship qualifier, five-time Section II Champion, former 400 Free Relay Section II Record holder, former 200 IM NHS Record Holder, National High School Academic All-American
 		
