fixed spacing issue

--- a/cv.tex
+++ b/cv.tex
@@ -15,7 +15,7 @@
 \tagline{Graduate Student | Computational Linguist}
 % \photo{2cm}{sig1.jpg}
 \socialinfo{
-    \email{manor@utexas.edu} \website{http://www.lauramanor.com/}{lauramanor.com}\\
+    \email{manor@utexas.edu} \website{http://www.lauramanor.com/}{http://www.lauramanor.com/}\\
 	\github{lauramanor} \linkedin{lauramanor}\\
 % 	\smartphone{+687 123 456}
 	\address{Austin, Texas}\\
