--- a/section_experience_research.tex
+++ b/section_experience_research.tex
@@ -14,12 +14,14 @@
 \begin{experiences}
   \experience
     {Current}   {Teaching Assistant}{University of Texas at Austin}{Austin, Texas}
-    {August 2017} { Teaching assistant for the Lingusitics department
-. Responsibilities include holding office hours, overseeing and grading assignments and final projects; proctoring and grading exams. Classes have included:
+    {August 2017} { Teaching assistant for the Linguistics department. Responsibilities include holding office hours, overseeing and grading assignments and final projects; proctoring and grading exams.
                       \begin{itemize}
                         \item Fall 2018: Computational Semantics (Katrin Erk) 
-                        \item Spring 2018: Language and Computers (Junyi Jessy Li)
-                        \item Fall 2017: Syntax and Semantics (Steve Wechsler)
+                        % \href{https://utdirect.utexas.edu/apps/student/coursedocs/nlogon/download/8865188}{Syllabus (PDF)}
+                        \item Spring 2018: Language and Computers (Junyi Jessy Li)  
+                        % \href{https://utdirect.utexas.edu/apps/student/coursedocs/nlogon/download/8298961}{Syllabus (PDF)}
+                        \item Fall 2017: Syntax and Semantics (Steve Wechsler)  
+                        % \href{https://utdirect.utexas.edu/apps/student/coursedocs/nlogon/download/7741117}{Syllabus (PDF)}
                       \end{itemize}
                     }
                     % {Python, NLTK, GenSim, Jupyter, Pycharm}
