--- a/section_langues.tex
+++ b/section_langues.tex
@@ -17,11 +17,11 @@
 	\skill{French}{3}
 % 	\skill{Spanish}{1}
 \end{skills}}
-{\sectionTitle{Strengths}{\faPlus}
+{\sectionTitle{Interests}{\faPlus}
 \vspace{1em}
 \begin{itemize}
-	\item Innovative
-	\item Motivated                    
-    \item Versatile
+	\item Language
+	\item Water/Snow Sports                    
+    \item Podcasts and Audiobooks
 \end{itemize}
 }
