--- a/section_scolarite.tex
+++ b/section_scolarite.tex
@@ -21,19 +21,17 @@
 
 \begin{education}
   \school
-    {2017-2020}   {}{Universtiy of Texas at Austin}{Department of Linguistics}
-    {(expected)} {
-                      M.A., Expected 2020; Ph.D. Expected 2022\\
+    {2017-current}   {}{MA, PhD, University of Texas at Austin}{Department of Linguistics}
+    {} {
+                      MA, Expected 2020; PhD Expected 2022\\
                       Advisors: Katrin Erk, Junyi Jessy Li
                     }
   \emptySeparator
   \school
-    {2010-2014}   {B.A., }{Emory University}{Department of Linguistics}
+    {2010-2014}   {BA, }{Emory University}{Department of Linguistics}
     {} {            
                       Magna Cum Laude with High Honors\\
-                      Honors Thesis: A Computational Approach to the Recovery of Primitive Concepts\\
-                      Honors Committee : Phil Wolf, Marjorie Pak, Eugene Agichtein \\
-                      Honors Advisor: Phil Wolff; Academic Advisor: Susan Tamasi
+                      Honors Thesis: A Computational Approach to the Recovery of Primitive Concepts
                     }
   \emptySeparator
    \school
