--- a/yaac-another-awesome-cv.cls
+++ b/yaac-another-awesome-cv.cls
@@ -272,7 +272,7 @@
     \ifundef{\@photodiameter}{
       \begin{minipage}{\linewidth}
     }{
-      \begin{minipage}{\dimexpr\linewidth-\@photodiameter-3em}
+      \begin{minipage}{\dimexpr\linewidth-\@photodiameter-2em}
     }
     \color{accentcolor}\user{\@firstname}{\@lastname}\color{black}\\
     \small{\@socialinfo}
@@ -287,7 +287,7 @@
     \ifundef{\@photodiameter}{
       \begin{minipage}{\linewidth}
     }{
-      \begin{minipage}{\dimexpr\linewidth-\@photodiameter-4em}
+      \begin{minipage}{\dimexpr\linewidth-\@photodiameter-2em}
     }
     \user{\@firstname}{\@lastname}\\
     \resumetitle{\@tagline}
@@ -311,6 +311,9 @@
   \fancyfoot[C]{#2}
   \fancyfoot[R]{#3}
 }
+
+\newcommand\emptySeparator{\multicolumn{2}{c}{}\\}
+
 
 % Resume part title definition
 \newcommand\sectionTitle[2]{\section{\texorpdfstring{\color{accentcolor}#2\enspace \textsc{#1}}{#1}}}
@@ -358,7 +361,7 @@
   \textbf{#1}    & \textbf{#2\textemph{#3}, #4}   								\\*
   \textbf{#5}    & \begin{minipage}[t]{\rightcolumnlength}
   					         #6
-                   \end{minipage}										\\*
+                   \end{minipage}										\\
 
   }
 
@@ -397,14 +400,14 @@
   \textbf{#5}    & \begin{minipage}[t]{\rightcolumnlength}
   					         #6
                    \end{minipage}										\\*
-                 & \footnotesize{\foreach \n in {#7}{\cvtag{\n}}} 	\\* \\
+                 & \footnotesize{\foreach \n in {#7}{\cvtag{\n}}} 	\\
   }
-
+  
 \newcommand\experience[6]{
   \textbf{#1}    & \textbf{#2, \textsc{#3}, #4}   								\\*
   \textbf{#5}    & \begin{minipage}[t]{\rightcolumnlength}
   					         #6
-                   \end{minipage}		 \\*	 \\							
+                   \end{minipage}	\\*	 					
   }
 
 
@@ -478,12 +481,12 @@
 }
 
 
-\newenvironment{awards}{%
-  \begin{longtable}{R{\leftcolumn}|E}
-}{%
+\newenvironment{awards}{
+  \begin{longtable}{R{\leftcolumn}E}
+}{
   \end{longtable}
 }
 \newcommand\award[3]{
-  \textbf{#1}    & \textbf{#2} #3   	\\*
+  \textbf{#1}    & \textbf{#2} #3    \vspace{.2em}	\\*
 
   }
