removed beginning paragraph

--- a/cv.tex
+++ b/cv.tex
@@ -12,11 +12,11 @@
 
 \documentclass[localFont,alternative]{yaac-another-awesome-cv}
 \name{Laura}{Manor}
-\tagline{Graduate Student | Computational Linguist}
-% \photo{2cm}{sig1.jpg}
+\tagline{Computational Linguist \& Graduate Student }
+\photo{3cm}{sig1.jpg}
 \socialinfo{
-    \email{manor@utexas.edu} \website{http://www.lauramanor.com/}{http://www.lauramanor.com/}\\
-	\github{lauramanor} \linkedin{lauramanor}\\
+     \website{http://www.lauramanor.com/}{http://www.lauramanor.com} \email{manor@utexas.edu}\\
+	\linkedin{lauramanor} \github{lauramanor} \\
 % 	\smartphone{+687 123 456}
 	\address{Austin, Texas}\\
 % 	\infos{Né le 23 septembre 1982 (35 ans) à Nouméa, Nouvelle-Calédonie}
@@ -31,7 +31,7 @@
 		{\textsc{Laura Manor - CV}}
 		{\thepage}
 
-	\input{section_headline}
+% 	\input{section_headline}
 	\input{section_competences}				% Section Skills
 	\input{section_scolarite}				% Section Education
 	\input{section_experience_research}		% Section Relevant Experience | research
