--- a/section_awards.tex
+++ b/section_awards.tex
@@ -1,4 +1,4 @@
-\sectionTitle{Awards }{}
+\sectionTitle{Awards }{\fastar}
 
 \begin{awards}
         \award{2014}{Magna Cum Laude}{Emory University}
