--- a/section_experience_research.tex
+++ b/section_experience_research.tex
@@ -13,8 +13,8 @@
 %\renewcommand{\labelitemi}{$\bullet$}
 \begin{experiences}
   \experience
-    {Current}   {Teaching Assistant}{University of Texas at Austin}{Austin, Texas}
-    {August 2017} { Teaching assistant for the Linguistics department. Responsibilities include holding office hours, overseeing and grading assignments and final projects; proctoring and grading exams.
+    {August 2017}   {Teaching Assistant}{University of Texas at Austin}{Austin, Texas}
+    {Current} { Oversaw and graded assignments, exams, and term projects for:
                       \begin{itemize}
                         \item Fall 2018: Computational Semantics (Katrin Erk) 
                         % \href{https://utdirect.utexas.edu/apps/student/coursedocs/nlogon/download/8865188}{Syllabus (PDF)}
@@ -27,8 +27,8 @@
                     % {Python, NLTK, GenSim, Jupyter, Pycharm}
   \emptySeparator
   \experiencetech
-    {June 2018} {Research Assistant}{University of Texas at Austin}{Austin, Texas}
-    {August 2018}    { Continued ongoing research on use of polarizing language in political speeches using Linguistic Inquiry and Word Count (LIWC)  }
+    {August 2018} {Research Assistant}{University of Texas at Austin}{Austin, Texas}
+    {June 2018}    { Continued ongoing research on use of polarizing language in political speeches using Linguistic Inquiry and Word Count (LIWC)  }
                     {Python, Pycharm, LIWC, Jupyter}
   \emptySeparator
   \experiencetech
