--- a/section_headline.tex
+++ b/section_headline.tex
@@ -8,6 +8,5 @@
 %
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
-\par{
-I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests are in Natural Language Processing with an ongoing project on text summarization and simplification of legal texts for non-legal users. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching.
+\par{A second year PhD student in Computational Linguistics at the University of Texas at Austin. Current research interests are in Natural Language Processing with an ongoing project on summarization and simplification of legal texts for non-legal users. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching.
 }
