--- a/section_references.tex
+++ b/section_references.tex
@@ -17,14 +17,11 @@
 		{Katrin Erk}
 		{Professor}
 		{University of Texas at Austin}
-		{Address}
 		{katrin.erk@mail.utexas.edu}
-
 	\referee
 		{Junyi Jessy Li}
-		{Professor}
+		{Assistant Professor}
 		{University of Texas at Austin}
-		{Address}
 		{jessy@austin.utexas.edu}
 
 \end{referees}
