--- a/cv.tex
+++ b/cv.tex
@@ -11,6 +11,10 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 \documentclass[localFont,alternative]{yaac-another-awesome-cv}
+\usepackage{bibentry}
+
+
+
 \name{Laura}{Manor}
 \tagline{Computational Linguist \& Graduate Student }
 \photo{3cm}{sig1.jpg}
@@ -31,17 +35,20 @@
 		{\textsc{Laura Manor - CV}}
 		{\thepage}
 
-% 	\input{section_headline}
-	\input{section_competences}				% Section Skills
+%	\input{section_headline}
+% 	\input{section_competences}				% Section Skills
+    \input{section_research_interests}
 	\input{section_scolarite}				% Section Education
+	\input{section_publications.tex}        % Section Publications
 	\input{section_experience_research}		% Section Relevant Experience | research
 	\input{section_projets}                 % Section Projects
+	\input{section_professional_activities}
 	\input{section_awards}	
-	\input{section_langues}					% Section Language
+% 	\input{section_langues}					% Section Language
 	
 	%\input{section_interets}				% Section Interests
 
-	\input{section_references} 				% Section References
+% 	\input{section_references} 				% Section References
 
 
 %where to put TLS stuff?
