--- a/section_competences.tex
+++ b/section_competences.tex
@@ -14,12 +14,13 @@
 
 \begin{keywords}
 		\keywordsentry{Programming}{Python, Java, Javascript, Google Apps Script, SQL, JSON}
-		\keywordsentry{Python Packages}{NLTK, Scikit Learn, Pytorch, Numpy, Pandas}
+% 		\keywordsentry{Python Packages}{NLTK, Scikit Learn, Pytorch, Numpy, Pandas}
 % 		\keywordsentry{Frameworks}{Spring, Spring Boot, \textbf{Ionic 3}, Angular 2, Angular 4, ZK, JBoss RichFaces}
 % 		\keywordsentry{Databases}{IBM DB2, Oracle Database, Microsoft SQL Server, MySQL, PostgreSQL}
 		\keywordsentry{Development tools}{Pycharm, Sublime, Eclipse, git}
 % 		\keywordsentry{Middleware}{\textbf{JBoss EAP}, \textbf{Apache Tomcat}, Websphere Application Server (\emph{WAS})}
-		\keywordsentry{Operating Systems}{Windows 10, Mac OS X, Ubuntu 16.04.5 LTS }
-		\keywordsentry{Business and Project Management}{NetSuite, Pivotal, DocuSign, Asana, LiquidPlanner, Jive}
-		\keywordsentry{Other}{Office Suite, G Suite, Creative Cloud, Selenium, Mechanical Turk, CSS/HTML, Latex}
+		\keywordsentry{Operating Systems}{Windows 10, Mac OS X, Ubuntu 16+ }
+		\keywordsentry{Business \& Project Management}{NetSuite, Pivotal, DocuSign, Asana, LiquidPlanner, Jive}
+		\keywordsentry{Other}{Office Suite, G Suite, Creative Cloud, Selenium, Mechanical Turk}
+% 		, CSS/HTML, Latex
 \end{keywords}
