--- a/section_experience_full.tex
+++ b/section_experience_full.tex
@@ -30,7 +30,7 @@
                         \item Continued ongoing research on use of polarizing language in political speeches using Linguistic Inquiry and Word Count (LIWC)                       
                       \end{itemize}
                     }
-                    {Python, Pycharm, LIWC, Jupyter}
+                    % {Python, Pycharm, LIWC, Jupyter}
   \emptySeparator
   \experiencetech
     {July 2018}     {Professional Services Coordinator}{G5 Search Marketing, Inc.}{Bend, Oregon}
@@ -42,7 +42,7 @@
 
                       \end{itemize}
                     }
-                    {NetSuite, Google Apps Scripts, DocuSign, Pivotal, Asana, LiquidPlanner, Jive, Zendesk, bitbucket, github}
+                    % {NetSuite, Google Apps Scripts, DocuSign, Pivotal, Asana, LiquidPlanner, Jive, Zendesk, bitbucket, github}
   \emptySeparator
   \experiencetech
     {November 2015}     {Quality Control Specialist}{G5 Search Marketing, Inc.}{Bend, Oregon}
@@ -52,7 +52,7 @@
                         \item streamlined/developed new processes to increase efficiency and quality.
                       \end{itemize}
                     }
-                    {Pivotal, Asana, Selenium, Screaming Frog, bitbucket}
+                    % {Pivotal, Asana, Selenium, Screaming Frog, bitbucket}
   \emptySeparator
     \experiencetech
     {September 2013} {Research Assistant}{Mind and Language Lab, Emory University }{Atlanta, Georgia}
@@ -62,7 +62,7 @@
                         \item instructed and supervised participants in research tasks, funded by Google Research grant.                
                       \end{itemize}
                     }
-                    {Java, Python, Eclipse, SQL, JSON, HTML/CSS, MTurk}
+                    % {Java, Python, Eclipse, SQL, JSON, HTML/CSS, MTurk}
   \emptySeparator
 
 \end{experiences}
