--- a/section_experience_research.tex
+++ b/section_experience_research.tex
@@ -16,6 +16,7 @@
     {August 2017}   {Teaching Assistant}{University of Texas at Austin}{Austin, Texas}
     {Current} { Oversaw and graded assignments, exams, and term projects for:
                       \begin{itemize}
+                        \item Spring 2019: Machine Learning Toolbox for Text Analysis (Junyi Jessy Li) 
                         \item Fall 2018: Computational Semantics (Katrin Erk) 
                         % \href{https://utdirect.utexas.edu/apps/student/coursedocs/nlogon/download/8865188}{Syllabus (PDF)}
                         \item Spring 2018: Language and Computers (Junyi Jessy Li)  
@@ -26,43 +27,44 @@
                     }
                     % {Python, NLTK, GenSim, Jupyter, Pycharm}
   \emptySeparator
-  \experiencetech
+  \experience
     {August 2018} {Research Assistant}{University of Texas at Austin}{Austin, Texas}
     {June 2018}    { Continued ongoing research on use of polarizing language in political speeches using Linguistic Inquiry and Word Count (LIWC)  }
-                    {Python, Pycharm, LIWC, Jupyter}
+                    % {Python, Pycharm, LIWC, Jupyter}
   \emptySeparator
-  \experiencetech
+  \experience
     {July 2017}     {Professional Services Coordinator}{G5 Search Marketing, Inc.}{Bend, Oregon}
     {November 2015}    {
                       \begin{itemize}
                         \item Oversaw/prepared preliminary estimates, Statement of Works, and change orders for digital marketing solutions and services 
-                        \item worked with clients to  complete select website enhancement projects 
-                        \item streamlined implementation processes for new deliverables
+                        \item Worked with clients to  complete select website enhancement projects 
+                        \item Streamlined implementation processes for new deliverables
 
                       \end{itemize}
                     }
-                    {NetSuite, Google Apps Scripts, DocuSign, Pivotal, Asana, LiquidPlanner, Jive, Zendesk, bitbucket, github}
+                    % {NetSuite, Google Apps Scripts, DocuSign, Pivotal, Asana, LiquidPlanner, Jive, Zendesk, bitbucket, github}
   \emptySeparator
-  \experiencetech
+  \experience
     {November 2015}     {Quality Control Specialist}{G5 Search Marketing, Inc.}{Bend, Oregon}
     {October 2014}    {
                       \begin{itemize}
-                        \item Performed quality testing on for functionality and content on standard and custom website design projects 
+                        \item Performed quality testing for functionality and content on standard and custom website projects 
                         \item Performed standard and custom integration testing with outside property management software
-                        \item streamlined/developed new processes to increase efficiency and quality.
+                        \item Streamlined/developed new processes to increase testing efficiency and quality.
+                        \item Prepared Statement of Work documents for standard implementation projects 
                       \end{itemize}
                     }
-                    {Pivotal, Asana, Selenium, Screaming Frog, bitbucket}
+                    % {Pivotal, Asana, Selenium, Screaming Frog, bitbucket}
   \emptySeparator
-    \experiencetech
+    \experience
     {July 2015} {Research Assistant}{Mind and Language Lab, Emory University }{Atlanta, Georgia}
     {September 2013}    {
                       \begin{itemize}
                         \item Designed programs for use in corpus analysis (see projects)
-                        \item instructed and supervised participants in research tasks, funded by Google Research grant.                
+                        \item Instructed and supervised participants in research tasks, funded by Google Research grant.                
                       \end{itemize}
                     }
-                    {Java, Python, Eclipse, SQL, JSON, HTML/CSS, Amazon Mechanical Turk}
+                    % {Java, Python, Eclipse, SQL, JSON, HTML/CSS, Amazon Mechanical Turk}
   \emptySeparator
 
 \end{experiences}
