--- a/section_projets.tex
+++ b/section_projets.tex
@@ -15,29 +15,29 @@
 \begin{projects}
 	\projectsimple
 	{Automated simplification and summarization, applied to legal documents}{2018 - Current}
-	{Currently writing proposals for model that will simultaneously simplify and summarize a legal document for a non-legal audience as well as the creation of a new legal data set. The model is inspired by a semantic approach to simplification, similar to that of Narayan and Gardent (2014). }
+	{Currently working on a model that will simultaneously simplify and summarize a legal document for a non-legal audience. Released a test set to be used form model development; see publications. }
 
-	\projectnolink
+	\projectsimplelink
 	{Writer's aid for South Bolivian Quechua [quh], Kalallusta variety}{2018 - Current}
-	{A character level n-gram writer's aid that detects words that do not conform to standard Kalallusta morphology as a term project for a Language Documentation class. This variety of Quechua is severely under-documented and does not currently have any writers aids. }
-	{Python36, Pycharm}
+	{\website{sbq.lauramanor.com}{sbq.lauramanor.com} }
+	{A character level n-gram writer's aid that detects words that do not conform to standard Kalallusta morphology. This is a continuation of a term project for a Language Documentation class. }
+% 	{Python36, Pycharm}
 
-	\projectnolink
+	\projectsimple
 	{Mention Generation using Variational Autoencoders}{2018 - Current}
-	{Working with another student to develop a multi-decoder Variational Autoencoder (VAE) that produces an entity mention conditioned on type. This is for a final project in a Natural Language Processing class.  }
-	{Python35, Pytorch, CONLL2012, git, GitHub, Pycharm}
+	{Developing a multi-decoder Variational Autoencoder (VAE) that produces an entity mention conditioned on type. This is a continuation of a final project in a Natural Language Processing class.  }
+% 	{Python35, Pytorch, CONLL2012, git, GitHub, Pycharm}
 
-
-	\project
+	\projectsimplelink
 	{The Verb Lexicon as Revealed by Recursive LDA}{2013 - 2015}
 	{\website{http://psychology.emory.edu/cognition/wolff/research.html}{http://psychology.emory.edu/cognition/wolff/research.html} }
 	{Worked with another student to develop a program based on a the Stanford Factored English Parser to find patterns in english syntax in relation to verbs. Developed an experiment which sought patterns of similarity between groups of words.}
-	{Java, Python27, Eclipse, AMT, HTML/CSS, SQL, SurveyMonkey}
-				
-	\project
+% 	{Java, Python27, Eclipse, AMT, HTML/CSS, SQL, SurveyMonkey}
+				% 
+	\projectsimplelink
 	{A Computational Approach to the Recovery of Primitive Concepts}{2014}
 	{ \website{https://qa-etd.library.emory.edu/concern/etds/m900nv052?locale=en}{Emory ETD}}
 	{Developed a Python module utilizing JSON to implement a recursive algorithm based on the traditional linguistic theory of Primitive Concepts. Compared results to various prominent primitive concepts sets.}
-	{Python27, Liclipse, NLTK, JSON}
+% 	{Python27, Liclipse, NLTK, JSON}
 
 \end{projects}
